--- a/src/cmpt/Select.css
+++ b/src/cmpt/Select.css
@@ -4,8 +4,16 @@
   font-family: inherit;
   padding: 6px 4px;
   border-radius: 4px;
-  margin-left: 12px;
+  margin: 4px 0;
   background-color: white;
   border: 1px solid #ccc;
   padding: 6px 10px;
+  flex: 1 0 0;
+  max-width: 100%;
+}
+
+.label {
+  padding: 0 10px;
+  flex: 0 0 100%;
+  display: block;
 }
